--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="./styles.css" rel="stylesheet" type="text/css" />
   <title>DOM</title>
 </head>
 <body>
-  <h1>Lista de Elementos</h1>
+  <h1>Listado de las Playas más hermosas</h1>
     <ul id="lista"></ul>
-    <button id="agregar">Agregar Elemento</button>
+    <button id="agregar">Compártenos tu playa favorita</button>
 
     <script src="./js/script.js"></script>
 </body>
 </html>
+
