--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./styles.css" rel="stylesheet" type="text/css" />
-  <title>DOM</title>
+  <link href="./style.css" rel="stylesheet" type="text/css" />
+  <title>Playas del mundo</title>
 </head>
 <body>
-  <h1>Listado de las Playas más hermosas</h1>
+  <h1>Buscamos</h1>
+  <h2>La mejor playa del mundo</h2>
     <ul id="lista"></ul>
     <button id="agregar">Compártenos tu playa favorita</button>
-
     <script src="./js/script.js"></script>
 </body>
 </html>
